--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "md5": "^2.3.0",
+    "morgan": "~1.9.1",
+    "node-fetch": "2",
+    "query-string": "^7.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
