--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cookie-parser": "~1.4.4",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "morgan": "~1.9.1",
